fixed menu z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,12 +11,14 @@ body{
     color: white;
     font-family: 'Concert One';
 }
-
+#start{
+    z-index: -1;
+}
 /*    NAV BAR
 */
 #navContainer{
     position: fixed;
-    z-index: 99;
+    z-index: 0;
     height: auto;
     width: 100%;
 }
@@ -57,12 +59,10 @@ svg{
 /*
     ABOUT DIV
 */
-
 #about{
     min-height: 100vh;
     width: 100%;
 }
-
 #aboutTitle{
     font-size: 2em;
     display: flex;
@@ -120,7 +120,7 @@ svg{
     PROJECTS DIV
 */
 #projects{
-    padding-top: 10%;
+    padding-top: 12%;
 }
 
 #projectsNav{
@@ -146,6 +146,7 @@ nav p {
 #infoContainer{
     margin: 2%;
     margin-top: 0px;
+    z-index: 1;
 }
 /* Library Light page */
 #libraryLinkSelect{
@@ -160,6 +161,7 @@ nav p {
     width: 98%;
     border-radius: 2em;
     padding: 1.5%;
+    z-index: 40;
 }
 /* Bus Talker page */
 #busLinkSelect{
@@ -174,6 +176,7 @@ nav p {
     width: 98%;
     border-radius: 2em;
     padding: 1.5%;
+    z-index: 40;
 }
 
 /* MyVitaLog page */
@@ -189,6 +192,7 @@ nav p {
     width: 98%;
     border-radius: 2em;
     padding: 1.5%;
+    z-index: 40;
 }
 /* Styling for all pages */
 #projectHide{
@@ -243,6 +247,7 @@ nav p {
     }
     #aboutImg{
         max-width: 100%;
+        padding-left: 1%;
     }
     /*
         Projects
@@ -251,7 +256,7 @@ nav p {
         height: 100vh;
         display:grid;
         grid-template-columns: 20% 80%;
-        padding-top: 1%;
+        padding-top: 2%;
     }
     #projectsNav{
         height: 100%;
